--- a/Code2APISeq/.project
+++ b/Code2APISeq/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Code2APISeq</name>
+	<name>Code2APIUseGraph</name>
 	<comment></comment>
 	<projects>
 	</projects>
